--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.7.0",
-    "eslint-plugin-standard": "^3.1.0"
+    "eslint-plugin-standard": "^3.1.0",
+    "gulp-webp": "^3.0.0"
   },
   "dependencies": {
     "gulp": "^3.9.1",
