--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Restaurant Reviews",
-    "short_name": "Restaurant-Reviews",
+    "short_name": "resv",
     "scope": "/",
     "theme_color": "#3397DB",
     "icons": [
