--- a/package.json
+++ b/package.json
@@ -30,13 +30,17 @@
     "gulp-webp": "^3.0.0"
   },
   "dependencies": {
+    "cssnano": "^4.0.1",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.9.4",
     "gulp-concat": "^2.6.1",
+    "gulp-cssnano": "^2.1.3",
     "gulp-csso": "^3.0.1",
     "gulp-imagemin": "^4.1.0",
+    "gulp-minify": "^3.1.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
-    "imagemin-jpeg-recompress": "^5.1.0"
+    "imagemin-jpeg-recompress": "^5.1.0",
+    "pump": "^3.0.0"
   }
 }
